# page-loader

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
page_loader/: __init__.py  cli.py  errors.py  html_doc.py  loader.py  logger.py  main.py  storage.py
page_loader/scripts/: page_loader.py
tests/: __init__.py  test_html_doc.py  test_loader.py  test_main.py  test_storage.py
tests/fixtures/: new-ru-hexlet-io-courses.html  ru-hexlet-io-courses.html  src-page.html  updated-page.html  www-php-net-docs.html
