[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "A command line utility that downloads pages from the Internet and stores them on your computer"
authors = ["stigsanek <stigsanek@yandex.ru>"]
repository = "https://github.com/stigsanek/python-project-51"
readme = "README.md"
packages = [{include = "page_loader"}]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
